syntax = "proto3";

package data;

option go_package = "./;data";

// Type to represent job status
enum Status {
	INACTIVE = 0;
	ACTIVE = 1;
	STARTED = 2;
	RUNNING = 3;
	SUCCESS = 4;
	FAILURE = 5;
	ONICE = 6;
	ONHOLD = 7;
	TERMINATED = 8;
}

// Request message to get run status of job
message GetJobRunStatusReq {
	string JobName = 1;
}

// Response message for job run status
message GetJobRunStatusRes {
	string JobName = 1;
	string StartTime = 2;
	string EndTime = 3;
	Status StatusType = 4;
}

// Request message to get run history of job
message GetJobRunHistoryReq {
	string JobName = 1;
}

// Response message for job run history
message GetJobRunHistoryRes {
	string JobName = 1;
	repeated string StartTime = 2;
	repeated string EndTime = 3;
	repeated Status StatusType = 4;
}

// Request message to get jil
message GetJilReq {
	string JobName = 1;
}

// Response message of jil
message GetJilRes {
	string JobName = 1;
	string Command = 2;
	repeated string Conditions = 3;
	string StdOut = 4;
	string StdErr = 5;
	string Machine = 6;
	string RunDays = 7;
	string StartTimes = 8;
}

// Service to handle status of jobs
service JobStatus {
	rpc GetJobRunStatus(GetJobRunStatusReq) returns (GetJobRunStatusRes) {}
	rpc GetJobRunHistory(GetJobRunHistoryReq) returns (GetJobRunHistoryRes) {}
	rpc GetJil(GetJilReq) returns (GetJilRes) {}
}